BUG :Created by should display the Name of the teacher instead of user and Teacher Profile should display the Name of the teacher instead of user and  Unsubscribe button and Start Course button should not have the same emphasis (check #49 Button Style ) Left align Unsubscribe button and Start Course button

--- a/SELI-Platform/client/stylesheet/course-presentation.css
+++ b/SELI-Platform/client/stylesheet/course-presentation.css
@@ -7,7 +7,9 @@
   height: 15vh;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
+  padding-left: 55px;
+  margin-top: 15px;
 }
 
 .course-presentation-title-container {
